--- a/JS_D2.html
+++ b/JS_D2.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title></title>
+<title>Calculator</title>
 <script>
 function addNum(){
 let no1=parseInt(document.getElementById('a1').value);
